Fixed default font sizes, better size UX on mobile

--- a/src/styles/scss/_settings.scss
+++ b/src/styles/scss/_settings.scss
@@ -86,7 +86,7 @@
 	will-change: transform;
 	-webkit-transform: translate3d(0, 0, 0);
 	transform: translate3d(0, 0, 0);
-	transition: transform 0.4s, background-color 0.6s;
+	transition: transform 0.4s, background-color 0.6s, opacity 0.6s;
 
 	&.shown {
 		-webkit-transform: translateX(-100%);
